<resources>
    <string name="app_name">AndroidBasicsFridayc43</string>
    <string name="email"> Email</string>
    <string name="password"> Password</string>
    <string name="write_your_email">Write your email</string>
    <string name="write_your_password">Write your password</string>
    <string name="login">Login</string>
    <string name="available_hotels">Available Hotels</string>
    <string name="register">Register</string>
    <string name="forget_password">Forget password</string>

    <string name="welcome">Welcome</string>
    <string name="More">More</string>
</resources>